--- a/style_about.css
+++ b/style_about.css
@@ -1,12 +1,12 @@
 html, body{
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-family: 'Poppins', sans-serif;
    background-color: #f0f0f0;
    padding: 0;
    margin: 0;
 }
 #menu {
   position: fixed;
-  background-color: #f0f0f0;
+  background-color: #f6f6f6;
   width: 100%;
   height: 100px;
   display: flex;
@@ -87,7 +87,6 @@ main {
    background-color: white;
    padding: 30px;
    border-radius: 8px;
-   box-shadow: 0 5px 15px rgba(0,0,0,0.05);
 }
 
 .card h3 {
@@ -96,7 +95,7 @@ main {
 }
 #pie_pagina {
    width: 100%;
-   background-color: #f0f0f0; 
+   background-color: #f6f6f6; 
    border-top: 1px solid #ccc;  
    padding: 20px 0;
    font-size: 14px;
@@ -113,4 +112,14 @@ main {
    list-style: none;
    margin: 30px 0 0 0;
    font-style: italic;
+}
+
+.iconos {
+    font-size: 2rem;
+    color: #333;
+    transition: color 0.3s;
+}
+
+.iconos:hover {
+    color: #000;
 }
