--- a/style_contact.css
+++ b/style_contact.css
@@ -1,6 +1,6 @@
 html, body
 {
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-family: 'Poppins', sans-serif;
    background-color: #f0f0f0;
    padding: 0;
    margin: 0;
@@ -9,7 +9,7 @@ html, body
 #menu 
 {
   position: fixed;
-  background-color: #f0f0f0;
+  background-color: #f6f6f6;
   width: 100%;
   height: 100px;
   display: flex;
@@ -45,10 +45,13 @@ html, body
 
 .contenido
 {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
+   margin: 0 auto;
+   padding: 40px;
+   text-align: center;
+   Display:flex;
+   flex-direction: column;  
+   align-items: center;
+   text-align: center;
 }
 
 h1 {
@@ -100,27 +103,12 @@ textarea
     height: 100px;
 }
 
-button 
-{
-    background-color: #FF8C00;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 3px;
-    margin-top: 10px;
-    cursor: pointer;
-    width: 100%;
-}
 
-button:hover 
-{
-    background-color: #FF6F00;
-}
 
 #pie_pagina
 {
    width: 100%;
-   background-color: #f0f0f0; 
+   background-color: #f6f6f6; 
    border-top: 1px solid #ccc;  
    padding: 20px 0;
    font-size: 14px;
@@ -139,4 +127,14 @@ button:hover
    list-style: none;
    margin: 30px 0 0 0;
    font-style: italic;
+}
+
+.iconos {
+    font-size: 2rem;
+    color: #333;
+    transition: color 0.3s;
+}
+
+.iconos:hover {
+    color: #000;
 }
