--- a/style_index.css
+++ b/style_index.css
@@ -1,25 +1,46 @@
 html, body{
    font-family: 'Poppins', sans-serif;
-   background-color: #f0f0f0;
    padding: 0;
    margin: 0;
 }
 
-#titulo_pagina{
-   color:#ffc107 !important;
-
-}
 
 #menu {
    position: fixed;
-   background-color: #f0f0f0;
+   background-color: #f5f5f5 !important;
    width: 100%;
+   top: 0;
+   left: 0;
+   z-index: 1000;
    height: 100px;
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   justify-content: center;
-   gap: 40px;
+   transition: top 0.3s ease;
+}
+
+#menu:hover {
+   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+   transition: box-shadow 0.3s;
+}
+
+
+.link {
+   position: relative;
+   transition: color 0.3s ease;
+}
+
+.link::after {
+   content: '';
+   position: absolute;
+   width: 0;
+   height: 2px;
+   bottom: 0;
+   left: 0;
+   background-color: #ffc107; /* amarillo bootstrap */
+   transition: width 0.3s ease;
+}
+
+.link:hover::after,
+.link:focus::after {
+   width: 100%;
 }
 
 #logo{
@@ -35,6 +56,11 @@ html, body{
    padding: 0;
 }
 
+#titulo_pagina{
+   color: rgb(250, 184, 4);
+   font-weight: bold;
+}
+
 .opcion {
    text-decoration: none;
    color: #5c5b5b;
@@ -42,49 +68,40 @@ html, body{
 }
 
 #contenedor_principal{
-   margin: 0 auto;
+   margin-top: 100px;
    padding: 40px;
-   text-align: center;
-   Display:flex;
-   flex-direction: column;
-   align-items: center;
-   text-align: center;
-}
-
-
-.boton{
-   font-weight: bold;
-}
-
-
-.tarjetas{
-   padding: 100px 500px;
-   text-align: center;
+   display:flex;
+   flex-wrap: wrap;
+   gap: 24px;
    justify-content: center;
-   border-radius: 5px;
-   border: none !important;
-   box-shadow: none !important;
 }
 
-.images{
-   width: 500px;
-   height: 300px;
+.card {
+   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.titulos-articulos{
-   cursor: pointer;
+.card:hover {
+   transform: translateY(-10px);
+   box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+}
+
+.card-img-top {
+  width: 100%;
+  height: 150px; 
 }
 
 
 #pie_pagina
 {
+   position: absolute;
    margin: 0;
    padding: 20px 0;
    border: none;
    box-shadow: none;
    text-align: center;
    width: 100%;
-   background-color: #f0f0f0;
+   background-color: #f5f5f5 !important;
+   height: 100px;
 }
 
 #titulo_footer
@@ -101,6 +118,14 @@ html, body{
    font-style: italic;
 }
 
-.icono{
-   color: #ffc107 !important;
+.iconos
+{
+   font-size: 1.5rem;
+   color: #333;
+   transition: color 0.3s;
+}
+
+.iconos:hover 
+{
+   color: #000 !important;
 }
