--- a/style_contact.css
+++ b/style_contact.css
@@ -1,23 +1,54 @@
 html, body
 {
    font-family: 'Poppins', sans-serif;
-   background-color: #f0f0f0;
    padding: 0;
    margin: 0;
 }
 
-#menu 
-{
-  position: fixed;
-  background-color: #f6f6f6;
-  width: 100%;
-  height: 100px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-  
+#menu {
+   position: fixed;
+   background-color: #f5f5f5 !important;
+   width: 100%;
+   top: 0;
+   left: 0;
+   z-index: 1000;
+   height: 100px;
+   transition: top 0.3s ease;
+}
+
+#menu:hover {
+   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+   transition: box-shadow 0.3s;
+}
+
+.link {
+   position: relative;
+   transition: color 0.3s ease;
+}
+
+.link::after {
+   content: '';
+   position: absolute;
+   width: 0;
+   height: 2px;
+   bottom: 0;
+   left: 0;
+   background-color: #ffc107; /* amarillo bootstrap */
+   transition: width 0.3s ease;
+}
+
+@media (max-width: 991px) {
+   .link::after {
+    display: none !important;
+   }
+   #logo{
+      height: 90px !important;
+   }
+}
+
+.link:hover::after,
+.link:focus::after {
+   width: 100%;
 }
 
 #logo
@@ -34,6 +65,12 @@ html, body
    margin: 0;
    padding: 0;
 }
+
+#titulo_pagina{
+   color: rgb(250, 184, 4);
+   font-weight: bold;
+}
+
 .opcion 
 {
    text-decoration: none;
@@ -41,11 +78,9 @@ html, body
    font-weight: 600;
 }
 
-
-
 .contenido
 {
-   margin: 0 auto;
+   margin-top: 100px;
    padding: 40px;
    text-align: center;
    Display:flex;
@@ -105,14 +140,18 @@ textarea
 
 
 
-#pie_pagina
-{
-   width: 100%;
-   background-color: #f6f6f6; 
-   border-top: 1px solid #ccc;  
+#pie_pagina{
+   position: absolute;
+   margin: 0;
    padding: 20px 0;
-   font-size: 14px;
-   color: #333;
+   border: none;
+   box-shadow: none;
+   text-align: center;
+   width: 100%;
+   background-color: #f6f6f6 !important;
+   height: 100px;
+   transition: top 0.3s ease;
+   box-shadow: 0 -4px 16px rgba(0,0,0,0.3);
 }
 
 #titulo_footer
