--- a/style_index.css
+++ b/style_index.css
@@ -38,6 +38,15 @@ html, body{
    transition: width 0.3s ease;
 }
 
+@media (max-width: 991px) {
+   .link::after {
+    display: none !important;
+   }
+   #logo{
+      height: 90px !important;
+   }
+}
+
 .link:hover::after,
 .link:focus::after {
    width: 100%;
@@ -91,8 +100,7 @@ html, body{
 }
 
 
-#pie_pagina
-{
+#pie_pagina{
    position: absolute;
    margin: 0;
    padding: 20px 0;
@@ -100,17 +108,17 @@ html, body{
    box-shadow: none;
    text-align: center;
    width: 100%;
-   background-color: #f5f5f5 !important;
+   background-color: #f6f6f6 !important;
    height: 100px;
+   transition: top 0.3s ease;
+   box-shadow: 0 -4px 16px rgba(0,0,0,0.3);
 }
 
-#titulo_footer
-{
+#titulo_footer{
    text-align: center;
 }
 
-#desarrolladores 
-{
+#desarrolladores {
    display: flex;
    gap: 70px;
    list-style: none;
@@ -118,14 +126,12 @@ html, body{
    font-style: italic;
 }
 
-.iconos
-{
-   font-size: 1.5rem;
+.iconos{
+   font-size: 2rem;
    color: #333;
    transition: color 0.3s;
 }
 
-.iconos:hover 
-{
+.iconos:hover{
    color: #000 !important;
 }
