--- a/style_contact.css
+++ b/style_contact.css
@@ -107,7 +107,10 @@ h2 {
     max-width: 600px;
 }
 
-
+.card:hover {
+   transform: translateY(-10px) !important;
+   box-shadow: 0 8px 16px rgba(0,0,0,0.2) !important;
+}
 .formulario 
 {
     background-color: white;
